--- a/src/content/blog/clean-2024/clean-architecture.mdx
+++ b/src/content/blog/clean-2024/clean-architecture.mdx
@@ -1,6 +1,6 @@
 ---
 title: Clean Architecture
-description: '클린 아키텍처를 적용한 접근방법을 차례대로 살펴봅니다.'
+description: '클린 아키텍처에 대해서'
 date: 2024-09-30
 tags: ['iOS', 'SwiftUI']
 authors: ['henry']
@@ -13,8 +13,6 @@ authors: ['henry']
 #CODE : [CLEAN_ARCHITECTURE](https://github.com/o-henry/clean_architecture)
 
 <br />
-
-## Start
 
 1.  영화 리스트를 제공하는 앱을 구현해봅니다.
     - 요구사항을 파악 해야합니다.
