--- a/src/content/blog/clean-2024/clean-architecture.mdx
+++ b/src/content/blog/clean-2024/clean-architecture.mdx
@@ -2,16 +2,13 @@
 title: Clean Architecture
 description: '클린 아키텍처에 대해서'
 date: 2024-09-30
-tags: ['iOS', 'SwiftUI']
+tags: ['Clean Architecture']
 authors: ['henry']
 ---
 
 <span className="font-locus">2024.10.14. 작성 중 ..</span>
 
 <br />
-
-#CODE : [CLEAN_ARCHITECTURE](https://github.com/o-henry/clean_architecture)
-
 <br />
 
 1.  영화 리스트를 제공하는 앱을 구현해봅니다.
